--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,6 +209,167 @@ small {
     min-height: 100vh;
 }
 
+
+/* Hero Banner on Detail Pages */
+input[type="radio"] {
+    height: 0;
+    opacity: 0;
+    width: 0;
+  }
+  input[type="radio"]:checked ~ .slide {
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  input[type="radio"]:checked + .slide {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    z-index: 1;
+  }
+  input[type="radio"]:checked + .slide + .nav {
+    z-index: 1;
+  }
+  input[type="radio"]:checked:nth-of-type(1) + .slide + .nav + .dots .dot:nth-child(1) {
+    background-color: #FFF;
+  }
+  input[type="radio"]:checked:nth-of-type(2) + .slide + .nav + .dots .dot:nth-child(2) {
+    background-color: #FFF;
+  }
+  input[type="radio"]:checked:nth-of-type(3) + .slide + .nav + .dots .dot:nth-child(3) {
+    background-color: #FFF;
+  }
+  input[type="radio"]:checked:nth-of-type(4) + .slide + .nav + .dots .dot:nth-child(4) {
+    background-color: #FFF;
+  }
+  .slider {
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+  }
+  
+  .slide {
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+    transition: all 1s ease;
+    width: 100%;
+  }
+  .slide::after {
+    color: #FFF;
+    content: attr(data-content);
+    font-size: 2.5em;
+    font-family: 'Consolas' arial, sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0);
+  }
+  .slide:nth-of-type(1) {
+    background-color: tomato;
+  }
+  .slide:nth-of-type(2) {
+    background-color: dodgerblue;
+  }
+  .slide:nth-of-type(3) {
+    background-color: #9B59b6;
+  }
+  .slide:nth-of-type(4) {
+    background-color: #2ECC71;
+  }
+  
+  .nav {
+    padding: 20px;
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translate3d(0, -50%, 0);
+            transform: translate3d(0, -50%, 0);
+    width: 100%;
+    z-index: 0;
+  }
+  
+  .prev {
+    cursor: pointer;
+    float: left;
+  }
+  .prev::after {
+    border-top: 2px solid #FFF;
+    border-left: 2px solid #FFF;
+    border-radius: 1px;
+    content: '';
+    display: block;
+    height: 20px;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    width: 20px;
+  }
+  
+  .next {
+    cursor: pointer;
+    float: right;
+  }
+  .next::before {
+    border-top: 2px solid #FFF;
+    border-right: 2px solid #FFF;
+    border-radius: 1px;
+    content: '';
+    display: block;
+    height: 20px;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 20px;
+  }
+  
+  .dots {
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .dot {
+    border: 2px solid #FFF;
+    border-radius: 50%;
+    cursor: pointer;
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+  }
+
+/* carouse 3 pic */
+/* external css: flickity.css */
+  .gallery {
+    background: #EEE;
+  }
+  
+  .gallery-cell {
+    width: 66%;
+    height: 200px;
+    margin-right: 10px;
+    background: #8C8;
+    counter-increment: gallery-cell;
+  }
+  
+  /* cell number */
+  .gallery-cell:before {
+    display: block;
+    text-align: center;
+    content: counter(gallery-cell);
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+  }
+  
+
+
 /* Footer */
 footer {
     margin-top: 100px;
@@ -227,6 +388,14 @@ footer {
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
+    label span { font-size: 50pt; }
+    .nav_slide .prev, .nav_slide .next{
+        width: 15%;
+    }	
+    #nav_slide .dots{
+        width: 12px;
+        height: 12px;
+    }
 }
 
 /* Medium devices (tablets, less than 992px) */
