--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,10 +9,9 @@ body {
 }
 header {
     width: 100%;
-    background-color: tomato;
 }
 
-/* All */
+/**** All ****/
 a {
     color: black;
 }
@@ -35,12 +34,35 @@ small {
 .color__primary {
     color: #5dc9c9;
 }
+.color__gray {
+    color: #7e9090;
+}
+.line__1height {
+    line-height: 1;
+}
 
-/* Header Nav bar */
+/**** Header Nav bar ****/
 .logo {
+    margin: 5px;
     height: 80px;
     width: auto;
 }
+.header_ico_navbar {
+    width: 32px;
+    height: 32px;
+}
+.navbar__phone {
+    margin-top: 50px;
+}
+.navbar__phone__number {
+    font-size: 2.125rem;
+    color: #5dc9c9;
+}
+
+/*.header {
+    z-index: 8;
+    margin-bottom: 120px;
+}*/
 .nav__contact__detail_phone {
     padding-top: 10px;
 }
@@ -50,10 +72,6 @@ small {
     letter-spacing: 0.1rem;
 }
 
-/*.header {
-    z-index: 8;
-    margin-bottom: 120px;
-}*/
 .header--contact-detail li {
     vertical-align: middle;
     font-weight: bold;
@@ -117,7 +135,7 @@ small {
     font-size: 1.125rem;
 }
 
-/* NAVBAR */
+/* NAVBAR ****/
 .ico_logo {
     width: 285px;
     height: 80px;
@@ -209,190 +227,252 @@ small {
     min-height: 100vh;
 }
 
-
 /* Hero Banner on Detail Pages */
-input[type="radio"] {
-    height: 0;
-    opacity: 0;
-    width: 0;
-  }
-  input[type="radio"]:checked ~ .slide {
-    -webkit-transform: translate3d(100%, 0, 0);
-            transform: translate3d(100%, 0, 0);
-  }
-  input[type="radio"]:checked + .slide {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-    z-index: 1;
-  }
-  input[type="radio"]:checked + .slide + .nav {
-    z-index: 1;
-  }
-  input[type="radio"]:checked:nth-of-type(1) + .slide + .nav + .dots .dot:nth-child(1) {
-    background-color: #FFF;
-  }
-  input[type="radio"]:checked:nth-of-type(2) + .slide + .nav + .dots .dot:nth-child(2) {
-    background-color: #FFF;
-  }
-  input[type="radio"]:checked:nth-of-type(3) + .slide + .nav + .dots .dot:nth-child(3) {
-    background-color: #FFF;
-  }
-  input[type="radio"]:checked:nth-of-type(4) + .slide + .nav + .dots .dot:nth-child(4) {
-    background-color: #FFF;
-  }
-  .slider {
-    height: 100%;
-    overflow: hidden;
+
+@keyframes tonext {
+    75% {
+        left: 0;
+    }
+    95% {
+        left: 100%;
+    }
+    98% {
+        left: 100%;
+    }
+    99% {
+        left: 0;
+    }
+}
+
+@keyframes tostart {
+    75% {
+        left: 0;
+    }
+    95% {
+        left: -300%;
+    }
+    98% {
+        left: -300%;
+    }
+    99% {
+        left: 0;
+    }
+}
+
+@keyframes snap {
+    96% {
+        scroll-snap-align: center;
+    }
+    97% {
+        scroll-snap-align: none;
+    }
+    99% {
+        scroll-snap-align: none;
+    }
+    100% {
+        scroll-snap-align: center;
+    }
+}
+
+ol,
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.carousel {
     position: relative;
-    width: 100%;
-  }
-  
-  .slide {
-    height: 100%;
-    opacity: 0;
+    padding-top: 75%;
+    filter: drop-shadow(0 0 10px #0003);
+    perspective: 100px;
+}
+
+.carousel__viewport {
     position: absolute;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    z-index: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-            transform: translate3d(-100%, 0, 0);
-    transition: all 1s ease;
+    display: flex;
+    overflow-x: scroll;
+    counter-reset: item;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+}
+
+.carousel__slide {
+    position: relative;
+    flex: 0 0 100%;
     width: 100%;
-  }
-  .slide::after {
-    color: #FFF;
-    content: attr(data-content);
-    font-size: 2.5em;
-    font-family: 'Consolas' arial, sans-serif;
+    background-color: #f99;
+    counter-increment: item;
+}
+
+.carousel__slide:nth-child(even) {
+    background-color: #99f;
+}
+
+.carousel__slide:before {
+    content: counter(item);
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate3d(-50%, -50%, 0);
-            transform: translate3d(-50%, -50%, 0);
-  }
-  .slide:nth-of-type(1) {
-    background-color: tomato;
-  }
-  .slide:nth-of-type(2) {
-    background-color: dodgerblue;
-  }
-  .slide:nth-of-type(3) {
-    background-color: #9B59b6;
-  }
-  .slide:nth-of-type(4) {
-    background-color: #2ECC71;
-  }
-  
-  .nav {
-    padding: 20px;
-    position: fixed;
-    top: 50%;
-    -webkit-transform: translate3d(0, -50%, 0);
-            transform: translate3d(0, -50%, 0);
-    width: 100%;
-    z-index: 0;
-  }
-  
-  .prev {
-    cursor: pointer;
-    float: left;
-  }
-  .prev::after {
-    border-top: 2px solid #FFF;
-    border-left: 2px solid #FFF;
-    border-radius: 1px;
-    content: '';
-    display: block;
-    height: 20px;
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-    width: 20px;
-  }
-  
-  .next {
-    cursor: pointer;
-    float: right;
-  }
-  .next::before {
-    border-top: 2px solid #FFF;
-    border-right: 2px solid #FFF;
-    border-radius: 1px;
-    content: '';
-    display: block;
-    height: 20px;
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
-    width: 20px;
-  }
-  
-  .dots {
-    padding: 20px;
+    transform: translate3d(-50%, -40%, 70px);
+    color: #fff;
+    font-size: 2em;
+}
+
+.carousel__snapper {
     position: absolute;
-    bottom: 0;
-    z-index: 1;
-    text-align: center;
+    top: 0;
+    left: 0;
     width: 100%;
-  }
-  
-  .dot {
-    border: 2px solid #FFF;
-    border-radius: 50%;
-    cursor: pointer;
-    display: inline-block;
-    height: 10px;
-    width: 10px;
-  }
+    height: 100%;
+    scroll-snap-align: center;
+}
 
-/* carouse 3 pic */
-/* external css: flickity.css */
-  .gallery {
-    background: #EEE;
-  }
-  
-  .gallery-cell {
-    width: 66%;
-    height: 200px;
-    margin-right: 10px;
-    background: #8C8;
-    counter-increment: gallery-cell;
-  }
-  
-  /* cell number */
-  .gallery-cell:before {
-    display: block;
+@media (hover: hover) {
+    .carousel__snapper {
+        animation-name: tonext, snap;
+        animation-timing-function: ease;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+    }
+
+    .carousel__slide:last-child .carousel__snapper {
+        animation-name: tostart, snap;
+    }
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .carousel__snapper {
+        animation-name: none;
+    }
+}
+
+.carousel:hover .carousel__snapper,
+.carousel:focus-within .carousel__snapper {
+    animation-name: none;
+}
+
+.carousel__navigation {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
     text-align: center;
-    content: counter(gallery-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;
-  }
-  
+}
 
+.carousel__navigation-list,
+.carousel__navigation-item {
+    display: inline-block;
+}
 
-/* Footer */
+.carousel__navigation-button {
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #333;
+    background-clip: content-box;
+    border: 0.25rem solid transparent;
+    border-radius: 50%;
+    font-size: 0;
+    transition: transform 0.1s;
+}
+
+.carousel::before,
+.carousel::after,
+.carousel__prev,
+.carousel__next {
+    position: absolute;
+    top: 0;
+    margin-top: 37.5%;
+    width: 4rem;
+    height: 4rem;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    font-size: 0;
+    outline: 0;
+}
+
+.carousel::before,
+.carousel__prev {
+    left: -1rem;
+}
+
+.carousel::after,
+.carousel__next {
+    right: -1rem;
+}
+
+.carousel::before,
+.carousel::after {
+    content: "";
+    z-index: 1;
+    background-color: #333;
+    background-size: 1.5rem 1.5rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: #fff;
+    font-size: 2.5rem;
+    line-height: 4rem;
+    text-align: center;
+    pointer-events: none;
+}
+
+.carousel::before {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+.carousel::after {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+/**** Footer ****/
 footer {
     margin-top: 100px;
 }
-.footer-middle {
+.footer__middle {
+    padding: 50px 0;
     background-color: #5dc9c9;
+}
+.footer__middle a:hover {
     color: white;
 }
-.footer-middle a {
-    color: white;
+.footer__middle_title {
+    margin-bottom: 14px;
+}
+.footet__list__item {
+    font-size: 1.125rem;
+}
+.footer_ico {
+    width: 35px;
+    height: 35px;
+}
+.footer__company__name {
+    margin-top: 1rem;
+    font-size: 1.5rem;
 }
 
+/**** Responsive ****/
 /* Small devices (landscape phones, less than 576px) */
 @media (max-width: 575.98px) {
+    .footer__copyright {
+        font-size: 0.825rem;
+    }
 }
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-    label span { font-size: 50pt; }
-    .nav_slide .prev, .nav_slide .next{
+    label span {
+        font-size: 50pt;
+    }
+    .nav_slide .prev,
+    .nav_slide .next {
         width: 15%;
-    }	
-    #nav_slide .dots{
+    }
+    #nav_slide .dots {
         width: 12px;
         height: 12px;
     }
