--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,13 +4,11 @@ body {
     font-size: 1rem;
     font-family: "db_heavent", sans-serif;
     line-height: 1.5;
-    background-color: white;
     color: black;
 }
 header {
     width: 100%;
     background-color: white;
-    overflow: hidden;
 }
 
 /**** All ****/
@@ -27,17 +25,20 @@ strong {
 small {
     font-size: 1rem;
 }
-.color__black {
+.colorBlack {
     color: black;
 }
-.color__white {
+.colorWhite {
     color: white;
 }
-.color__primary {
+.colorPrimary {
     color: #5dc9c9;
 }
-.color__gray {
+.colorGray {
     color: #7e9090;
+}
+.fontSize125rem {
+    font-size: 1.25rem;
 }
 .line__1height {
     line-height: 1;
@@ -47,385 +48,113 @@ small {
     clear: both;
     overflow: hidden;
 }
+.ulNoDist {
+    list-style: none;
+}
+.displayInline {
+    display: inline-block;
+}
 
-/**** Header Nav bar ****/
+/**** Navbar ****/
+.navbarLogo {
+    height: 100px;
+}
 .logo {
-    margin: 5px 10px;
-    height: 70px;
+    margin: 10px;
+    height: 80px;
     width: auto;
 }
-.header_ico_navbar {
+.icoNavbar {
     width: 32px;
     height: 32px;
+}
+.navbarInfo {
+    margin: 0;
+    padding: 20px;
+    height: 100px;
+}
+.slanguage.dropdown-menu {
+    padding-left: 25px;
+    min-width: 8rem;
+}
+.slanguage li {
+    margin: 8px 0;
+}
+.navbarInfo__li {
+    vertical-align: middle;
+}
+.navbarPhone {
+    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+}
+.navbarPhone label {
+    margin: 0;
+}
+.navbarPhoneLabel a:hover {
+    color: #5dc9c9;
+}
+.navbarTxt {
+    font-size: 0.95rem;
 }
 .navbar {
     padding-top: 0px;
     padding-bottom: 0px;
 }
-.navbar__phone {
-    line-height: 1;
-}
-.navbar__phone__txt {
-    margin: 0;
-}
-.navbar__phone__number {
-    font-size: 2.125rem;
-    color: #5dc9c9;
-}
 .nav-item {
     font-size: 1.5rem;
     font-weight: 600;
-    margin: 0 15px;
+    padding: 0 20px;
 }
 .nav-item.active,
 .nav-item:hover {
     color: black;
 }
-
-
-/*.header {
-    z-index: 8;
-    margin-bottom: 120px;
-}
-.nav__contact__detail_phone {
-    padding-top: 10px;
-}
-.nav__contact__detail_phone__num {
-    font-size: 2rem;
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-}
-
-.header--contact-detail li {
-    vertical-align: middle;
-    font-weight: bold;
-}
-.slanguage-show-desktop.th {
-    font-size: 0.85rem;
-    font-family: "Gotham";
-}
-.slanguage-show-desktop.en {
-    font-size: 1.25rem;
-    font-family: "Gotham";
-}
-.slanguage-show-desktop.cam {
-    font-size: 1.25rem;
-    font-family: "Gotham";
-}
-
-.header--contact-detail-lang label {
-    font-size: 0.8rem;
-    padding: 25px 2px;
-}
-.header--contact-detail-lang label a {
-    color: #000000;
-    font-size: 1.25rem;
-}
-.header--contact-detail-lang label a.active {
-    color: #ff6c0e;
-}
-
-.sLangOnMobile {
-    font-size: 1rem;
-    margin: 0 8px;
-}
-.sLangOnMobile a {
-    color: #fff;
-}
-.sLangOnMobile a.active {
-    color: #ff6c0e;
-}
-
-.slanguage.dropdown-menu {
-    padding-left: 12px;
-    min-width: 9rem;
-}
-.slanguage li {
-    margin: 8px 0;
-}
-.slanguage-show-mobile.th {
-    color: #fff;
-    font-family: "Gotham";
-    font-size: 0.85rem;
-}
-.slanguage-show-mobile.en {
-    color: #fff;
-    font-family: "Gotham";
-    font-size: 1.125rem;
-}
-.slanguage-show-mobile.cam {
-    color: #fff;
-    font-family: "Gotham";
-    font-size: 1.125rem;
-}*/
-
-/* NAVBAR ****/
-/*.ico_logo {
-    width: 285px;
-    height: 80px;
-}
-.navbar-nav {
-    font-size: 1.325rem;
-    font-weight: bold;
-}*/
-/* The sticky class is added to the header with JS when it reaches its scroll position */
-/*.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}*/
-/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-/*.sticky + .content {
-    padding-top: 102px;
-}*/
-
-/* MENU */
-/*.navbar-toggle .icon-bar {
-    transition: all 0.2s;
-}
-.navbar-toggle .top-bar {
-    transform: rotate(-135deg);
-    margin: 6px 0 -12px 0;
-}
-.navbar-toggle .middle-bar {
-    opacity: 0;
-    width: 0;
-}
-.navbar-toggle .bottom-bar {
-    transform: rotate(135deg);
-    margin-bottom: 6px;
-}
-.navbar-toggle.collapsed .top-bar {
-    transform: rotate(0);
-    margin: 0;
-}
-.navbar-toggle.collapsed .middle-bar {
-    opacity: 1;
-    width: 100%;
-}
-.navbar-toggle.collapsed .bottom-bar {
-    transform: rotate(0);
-    margin-bottom: 0;
-}
-
-.dropdown-submenu {
-    position: relative;
-}
-.dropdown-submenu a::after {
-    transform: rotate(-90deg);
-    position: absolute;
-    right: 6px;
-    top: 0.8em;
-}
-.dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-left: 0.1rem;
-    margin-right: 0.1rem;
-}
-.navbar-light .navbar-nav .nav-link,
-.navbar-light .navbar-nav .active > .nav-link {
-    color: #ffffff;
-}
-#navbarTogglerMainMenu {
-    font-size: 1rem;
-}
 .boxSearch {
     width: 18rem !important;
-    font-size: 1rem;
+    font-size: 1.125rem;
 }
-.txt-phonnumber-mobile {
-    color: #ffffff;
-    font-size: 1rem;
-}*/
 
 /* Content */
 #wrapper {
-    margin-top: 130px;
+    margin-top: 150px;
     overflow: hidden;
     background-color: white;
-    /*min-height: 100vh;*/
 }
 
-/* Hero Banner on Detail Pages */
-/*@keyframes tonext {
-    75% { left: 0;      }
-    95% { left: 100%;   }
-    98% { left: 100%;   }
-    99% { left: 0;  }
+/* Home */
+.section__info {
+    margin: -80px;
 }
-
-@keyframes tostart {
-    75% { left: 0;      }
-    95% { left: -300%;  }
-    98% { left: -300%;  }
-    99% { left: 0;      }
+.section__info__txt {
+    background-color: #5dc9c9;
 }
-
-@keyframes snap {
-    96% {   scroll-snap-align: center;  }
-    97% {   scroll-snap-align: none;    }
-    99% {   scroll-snap-align: none;    }
-    100% {  scroll-snap-align: center;  }
+.icoInfo {
+    width: 100px;
+    height: 100px;
 }
-.hero_banner {
+.section_info_1 {
+    background-color: #5dc9c9;
+}
+.section_info_2 {
+    background-color: #6cd3d2;
+}
+.home__info {
+    padding: 50px 15px;
+}
+.section__doctor,
+.section__article {
+    margin-top: 120px;
+}
+.section__doctor__hr {
+    width: 14%;
+    height: 3px;
+    background-color: #5dc9c9;
+}
+video {
     width: 100%;
+    max-height: 100%;
 }
-.hero_banner ol,
-.hero_banner li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.carousel {
-    position: relative;
-    padding-top: 75%;
-    filter: drop-shadow(0 0 10px #0003);
-    perspective: 100px;
-    height: 600px;
-}
-
-.carousel__viewport {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    overflow-x: scroll;
-    counter-reset: item;
-    scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
-}
-
-.carousel__slide {
-    position: relative;
-    flex: 0 0 100%;
-    width: 100%;
-    background-color: #f99;
-    counter-increment: item;
-}
-
-.carousel__slide:nth-child(even) {
-    background-color: #99f;
-}
-
-.carousel__slide:before {
-    content: counter(item);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -40%, 70px);
-    color: #fff;
-    font-size: 2em;
-}
-
-.carousel__snapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    scroll-snap-align: center;
-}
-
-@media (hover: hover) {
-    .carousel__snapper {
-        animation-name: tonext, snap;
-        animation-timing-function: ease;
-        animation-duration: 4s;
-        animation-iteration-count: infinite;
-    }
-
-    .carousel__slide:last-child .carousel__snapper {
-        animation-name: tostart, snap;
-    }
-}
-
-@media (prefers-reduced-motion: reduce) {
-    .carousel__snapper {
-        animation-name: none;
-    }
-}
-
-.carousel:hover .carousel__snapper,
-.carousel:focus-within .carousel__snapper {
-    animation-name: none;
-}
-
-.carousel__navigation {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-}
-
-.carousel__navigation-list,
-.carousel__navigation-item {
-    display: inline-block;
-}
-
-.carousel__navigation-button {
-    display: inline-block;
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: #333;
-    background-clip: content-box;
-    border: 0.25rem solid transparent;
-    border-radius: 50%;
-    font-size: 0;
-    transition: transform 0.1s;
-}
-
-.carousel::before,
-.carousel::after,
-.carousel__prev,
-.carousel__next {
-    position: absolute;
-    top: 0;
-    margin-top: 37.5%;
-    width: 4rem;
-    height: 4rem;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    font-size: 0;
-    outline: 0;
-}
-
-.carousel::before,
-.carousel__prev {
-    left: -1rem;
-}
-
-.carousel::after,
-.carousel__next {
-    right: -1rem;
-}
-
-.carousel::before,
-.carousel::after {
-    content: "";
-    z-index: 1;
-    background-color: #333;
-    background-size: 1.5rem 1.5rem;
-    background-repeat: no-repeat;
-    background-position: center center;
-    color: #fff;
-    font-size: 2.5rem;
-    line-height: 4rem;
-    text-align: center;
-    pointer-events: none;
-}
-
-.carousel::before {
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-}
-
-.carousel::after {
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
-}*/
 
 /**** Footer ****/
 footer {
@@ -456,14 +185,27 @@ footer {
 /**** Responsive ****/
 /* Small devices (landscape phones, less than 576px) */
 @media (max-width: 575.98px) {
+    .icoNavbarMini {
+        width: 16px;
+        height: 16px;
+    }
     .footer__copyright {
         font-size: 0.825rem;
+    }
+
+    /* Home */
+    .section__info {
+        margin: 25px;
+    }
+    .section__doctor,
+    .section__article {
+        margin-top: 50px;
     }
 }
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-    label span {
+    /*label span {
         font-size: 50pt;
     }
     .nav_slide .prev,
@@ -473,7 +215,7 @@ footer {
     #nav_slide .dots {
         width: 12px;
         height: 12px;
-    }
+    }*/
 }
 
 /* Medium devices (tablets, less than 992px) */
