update css for artical pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,6 +40,9 @@ small {
 .fontSize125rem {
     font-size: 1.25rem;
 }
+.fontSize15rem {
+    font-size: 1.5rem;
+}
 .line__1height {
     line-height: 1;
 }
