update about us page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,6 +43,9 @@ small {
 .fontSize15rem {
     font-size: 1.5rem;
 }
+.fontSize2rem {
+    font-size: 2rem;
+}
 .line__1height {
     line-height: 1;
 }
