--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,6 +46,9 @@ small {
 .fontSize2rem {
     font-size: 2rem;
 }
+.fontSize3rem {
+    font-size: 3rem;
+}
 .line__1height {
     line-height: 1;
 }
