--- a/public/css/main.css
+++ b/public/css/main.css
@@ -198,6 +198,10 @@ footer {
         width: 16px;
         height: 16px;
     }
+    .footer__middle_title,
+    .footet__list__item {
+        text-align: center;
+    }
     .footer__copyright {
         font-size: 0.825rem;
     }
@@ -214,17 +218,6 @@ footer {
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /*label span {
-        font-size: 50pt;
-    }
-    .nav_slide .prev,
-    .nav_slide .next {
-        width: 15%;
-    }
-    #nav_slide .dots {
-        width: 12px;
-        height: 12px;
-    }*/
 }
 
 /* Medium devices (tablets, less than 992px) */
