fixbug for design

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,8 +69,8 @@ small {
     height: 100px;
 }
 .logo {
-    margin: 10px;
-    height: 80px;
+    margin: 0px 10px;
+    height: 100px;
     width: auto;
 }
 .icoNavbar {
